Fixing some class issues on the about us and community page, fixing some spacing

--- a/web/app/themes/vestedworld/assets/styles/components/_people-grid.scss
+++ b/web/app/themes/vestedworld/assets/styles/components/_people-grid.scss
@@ -7,6 +7,7 @@
 .people {
   padding: #{$vertical-beat * 8} $mobile-global-padding;
   @include media-md {
+    margin-top: #{$vertical-beat * 8};
     padding: #{$vertical-beat * 8} $global-padding;
   }
   .people-grid {
